# projeto-integrador-transdisciplinar

./: .env_docker  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml  todo-list
.sqlx/: query-00f280cbc05e6148b01073235c06cd24fc9eb4dc2470ecd0badd2866f0fe3b6a.json  query-06931fd9c43fdf456fcc1f0a2de17b8251e0a66a8a92610d32fe64f23286bb4c.json  query-111bc3bd943997ad00402defaedb4308d979881ee4044dca28788fd5c13dc9a1.json  query-16d05b987f88104596d10e11199869fc7578ab7b08dbac2e0237d2aa312fbbbc.json  query-17f1cd155a3329a76ab295e2746fea98d73b1feb8330a320deb6c6c8ca963963.json  query-1c3710c57e30fa2fe2b5422eea7da128f727a39a9349a9580be5bde1c9d8c0a4.json  query-1fc729083a520a15bed81d47ee8ad0965b3a3374e6161aaa271b61dc92a9b79b.json  query-219539963511131891df986c43aca0442f75601cb4f6cb3974fbada273acf43e.json  query-29475252951648567f0b163a87ca97e4d981ff1ab2b448035bd52e7de817d5ad.json  query-2a2077ae261a51d57130c6d525872297f5d9de6b27b5706cdf820604decbf3ff.json  query-331a18d52a1c84299ae26fd5ead568145b29d0633ec50a27b21608d89bbf4e6c.json  query-346f2e546841c92494b429d74dae66f94e95c53d36dc1546b3d1f41d2ef14cbb.json  query-3f46024e53223a6d39e2b125d6e569511e682fcd8abcfdb15d8936b74ecdc78f.json  query-4ad47226b704588598593c9dc80dcb688fae8d583756b0b808c8669cf0a1bb11.json  query-4bb0ddfaa644741ef5c6c8d5fa304155323b750a02c26afce179d30263924f8a.json  query-58f313600a2e449dd9679f54aca56078c778a2c56e95c047b31d566a456f0ce3.json  query-6b73d04920810cda20d447a04375cef9f06735af9bf17655813d0a7856c28fc2.json  query-6c4ac492ad69c782d27ae70e8799fa56780b4ef118e0ddb2deaf36ca2f4b6506.json  (+19 more)
(+106 files in other folders)
