[package]
name = "projeto-integrador-transdisciplinar"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "time", "ipnetwork", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
actix-files = "0.6.6"
dotenv = "0.15.0"
bcrypt = "0.15.1"
actix-session = { version = "0.10.0", features = ["redis-session"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
