[package]
name = "projeto-integrador-transdisciplinar"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
sqlx = { version = "0.8.1", features = ["runtime-tokio", "postgres", "time", "ipnetwork", "uuid"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15.0"
bcrypt = "0.15.1"
actix-session = { version = "0.10.0", features = ["redis-session"] }
actix-cors = "0.7.0"
